# studyscraper-rs

./: Cargo.toml
src/: main.rs
templates/: download.tera
