[package]
name = "studyscraper"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "=0.5.0" }
ureq = "2.7.1"
regex = "1.9.5"
serde_json = "1.0.114"
#rocket_contrib = { version = "0.4.10", features = ["tera_templates"] }
tera = "1.12.0"
reqwest = {version = "0.11.24", features = ["json"]}
rocket_dyn_templates = {version = "0.1.0", features = ["tera"]}

